# core-math-binary64

./: CMakeLists.txt  README.md  build.sh
include/: crmath.h
src/asinpi/: asinpi.c
src/atanpi/: atanpi.c
src/cbrt/: cbrt.c
src/cospi/: cospi.c
src/erfc/: erfc.c
src/exp/: exp.c
src/exp10/: exp10.c
src/exp10m1/: exp10m1.c
src/exp2/: exp2.c
src/exp2m1/: exp2m1.c
src/log10p1/: log10p1.c
src/log2p1/: log2p1.c
src/pow/: pow.c
src/rsqrt/: rsqrt.c
src/sinh/: sinh.c
src/sinpi/: sinpi.c
src/tanpi/: tanpi.c
src/tgamma/: tgamma.c
